[package]
name = "hastacian2"
version = "0.1.0"
edition = "2024"


[dependencies]
# client-http     = { path = "../client-http" }
# mem-log         = { path = "../mem-log", features = [] }
# network-v1-http = { path = "../network-v1-http" }
openraft        = { git = "https://github.com/databendlabs/openraft", branch = "release-0.10", features = ["serde", "type-alias"] }

actix-web          = { version = "4.0.0-rc.2" }
bincode = "1"
clap               = { version = "4.1.11", features = ["derive", "env"] }
reqwest            = { version = "0.12.5", features = ["json"] }
serde              = { version = "1.0.114", features = ["derive"] }
serde_json         = { version = "1.0.57" }
tokio              = { version = "1.0", default-features = false, features = ["sync"] }
tracing            = { version = "0.1.29" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
maplit = "1.0.2"
futures = "0.3.31"
socket2 = "0.5"


[dev-dependencies]
anyhow = { version = "1.0.63" }
maplit = { version = "1.0.2" }

[features]

[package.metadata.docs.rs]
all-features = true
